--- a/notebooks/dataset_analysis.ipynb
+++ b/notebooks/dataset_analysis.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,26 +194,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 44608 (\\N{HANGUL SYLLABLE GIM}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 54861 (\\N{HANGUL SYLLABLE HONG}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 51473 (\\N{HANGUL SYLLABLE JUNG}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 49569 (\\N{HANGUL SYLLABLE SONG}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 48124 (\\N{HANGUL SYLLABLE MIN}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 44592 (\\N{HANGUL SYLLABLE GI}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 39640 (\\N{CJK UNIFIED IDEOGRAPH-9AD8}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 28716 (\\N{CJK UNIFIED IDEOGRAPH-702C}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 24859 (\\N{CJK UNIFIED IDEOGRAPH-611B}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
-      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_18228\\3731032827.py:39: UserWarning: Glyph 34425 (\\N{CJK UNIFIED IDEOGRAPH-8679}) missing from font(s) DejaVu Sans.\n",
-      "  plt.tight_layout()  # Ensures labels fit within the figure\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 44608 (\\N{HANGUL SYLLABLE GIM}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 54861 (\\N{HANGUL SYLLABLE HONG}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 51473 (\\N{HANGUL SYLLABLE JUNG}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 49569 (\\N{HANGUL SYLLABLE SONG}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 48124 (\\N{HANGUL SYLLABLE MIN}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 44592 (\\N{HANGUL SYLLABLE GI}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 39640 (\\N{CJK UNIFIED IDEOGRAPH-9AD8}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 28716 (\\N{CJK UNIFIED IDEOGRAPH-702C}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 24859 (\\N{CJK UNIFIED IDEOGRAPH-611B}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
+      "C:\\Users\\mikek\\AppData\\Local\\Temp\\ipykernel_12772\\4286321527.py:28: UserWarning: Glyph 34425 (\\N{CJK UNIFIED IDEOGRAPH-8679}) missing from font(s) DejaVu Sans.\n",
+      "  plt.tight_layout()\n",
       "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 44608 (\\N{HANGUL SYLLABLE GIM}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n",
       "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 54861 (\\N{HANGUL SYLLABLE HONG}) missing from font(s) DejaVu Sans.\n",
@@ -244,17 +248,10 @@
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "import re\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "\n",
-    "# Split raw_comp_writers_text into names delimited by /\n",
     "names_raw = []\n",
     "for text in df['raw_comp_writers_text']:\n",
-    "    if isinstance(text, float):  # Skip NaN values\n",
+    "    if isinstance(text, float):\n",
     "        continue\n",
     "    names_raw += re.split(r'/', text)\n",
     "\n",
@@ -267,22 +264,19 @@
     "freq = [freq for name, freq in name_freq_raw.most_common(150)]\n",
     "y_pos = np.arange(len(names))\n",
     "\n",
-    "# Create a wider plot\n",
-    "plt.figure(figsize=(20, 6))  # Adjust width (20) and height (6) as needed\n",
+    "plt.figure(figsize=(20, 6))\n",
     "\n",
     "# Plot the bar chart\n",
     "plt.bar(y_pos, freq, align='center', alpha=0.5)\n",
     "\n",
     "# Customize x-axis labels\n",
-    "plt.xticks(y_pos, names, rotation=90, fontsize=8)  # Rotate labels and adjust font size\n",
+    "plt.xticks(y_pos, names, rotation=90, fontsize=8)\n",
     "\n",
-    "# Add labels and title\n",
     "plt.xlabel('Names')\n",
     "plt.ylabel('Frequency')\n",
     "plt.title('Top 100 Most Common Names')\n",
     "\n",
-    "# Show the plot\n",
-    "plt.tight_layout()  # Ensures labels fit within the figure\n",
+    "plt.tight_layout() \n",
     "plt.show()\n"
    ]
   }
