--- a/notebooks_general/dataset_analysis.ipynb
+++ b/notebooks_general/dataset_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import the necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +18,13 @@
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the data and print them\n"
    ]
   },
   {
@@ -61,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Redundant entries:** Many CLEAN_TEXT values are identical to raw_comp_writers_text"
+    "## Check the CLEAN_TEXT values are identical to raw_comp_writers_text"
    ]
   },
   {
@@ -117,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Missing values:** Some rows have NaN values."
+    "## Check which rows have NaN values."
    ]
   },
   {
@@ -176,6 +190,20 @@
     "print(\"percentage of Empty raw_comp_writers_text values:\",(df[df['raw_comp_writers_text'].isnull()].shape[0]/df.shape[0]) * 100,\"%\")\n",
     "\n",
     "print(df[df['raw_comp_writers_text'].isnull()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that some entries have NaN values in the CLEAN_TEXT column. Some of them are logical since they doesnt contain any writer information (e.g., UNKNOWN WRITER (999990) -> NaN). However, there are some other entries that have NaN values in the CLEAN_TEXT column but they have writer information in the raw_comp_writers_text column (e.g., Phanendra/Shakti -> NaN). Those are outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check most common words in the raw_comp_writers_text column"
    ]
   },
   {
@@ -281,6 +309,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can observe that there are frequent words that are not related to the writer information. We can remove those words from the raw_comp_writers_text column to simplify the text by using rule-based methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Isolating the names from the CLEAN_TEXT column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -339,66 +381,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                  raw_comp_writers_text  \\\n",
-      "0               Jordan Riley/Adam Argyle/Martin Brammer   \n",
-      "1                                         Martin Hygård   \n",
-      "2     Jesse Robinson/Greg Phillips/Kishaun Bailey/Ka...   \n",
-      "3                                             Alvin Lee   \n",
-      "4                           Haddag Samir/MusicAlligator   \n",
-      "...                                                 ...   \n",
-      "7249  Jonny Buckland/Guy Berryman/Will Champion/Chri...   \n",
-      "7250                                      Terrance Byrd   \n",
-      "7251                                       Pillar Point   \n",
-      "7252                                       Sierra Lucas   \n",
-      "7253                         Budde Music/Lorenz Brunner   \n",
-      "\n",
-      "                                             CLEAN_TEXT  \n",
-      "0               Jordan Riley/Adam Argyle/Martin Brammer  \n",
-      "1                                         Martin Hygård  \n",
-      "2     Jesse Robinson/Greg Phillips/Kishaun Bailey/Ka...  \n",
-      "3                                             Alvin Lee  \n",
-      "4                                          Haddag Samir  \n",
-      "...                                                 ...  \n",
-      "7249  Jonny Buckland/Guy Berryman/Will Champion/Chri...  \n",
-      "7250                                      Terrance Byrd  \n",
-      "7251                                       Pillar Point  \n",
-      "7252                                       Sierra Lucas  \n",
-      "7253                                     Lorenz Brunner  \n",
-      "\n",
-      "[7254 rows x 2 columns]\n"
-     ]
-    }
-   ],
    "source": [
-    "# Set of unique names in CLEAN_TEXT\n",
-    "names_clean = set([\n",
-    "    name \n",
-    "    for text in df['CLEAN_TEXT']\n",
-    "    if isinstance(text, str)\n",
-    "    for name in re.split(r'/', text)\n",
-    "    if len(re.sub(r'[\\W_]', '', name)) > 3 and not re.match(r'^[\\W\\d]+$', name)\n",
-    "])\n",
-    "\n",
-    "# Function to check if any name in names_clean is present in both columns\n",
-    "def filter_row(row):\n",
-    "    if not isinstance(row['raw_comp_writers_text'], str) or not isinstance(row['CLEAN_TEXT'], str):\n",
-    "        return False\n",
-    "    raw_names = set(re.split(r'/', row['raw_comp_writers_text']))\n",
-    "    clean_names = set(re.split(r'/', row['CLEAN_TEXT']))\n",
-    "    return not raw_names.isdisjoint(names_clean) and not clean_names.isdisjoint(names_clean)\n",
-    "\n",
-    "# Apply the filter function to the DataFrame\n",
-    "filtered_df = df[df.apply(filter_row, axis=1)].reset_index(drop=True)\n",
-    "\n",
-    "print(filtered_df)\n"
+    "In this context, we assume that the writer names in the result are separated by a `/`. We also assume that for a split value to be considered a valid name, it should contain more than three alphabetical characters. This approach helps discard false values in the `CLEAN_TEXT` column, such as 'THE', '&', etc. Ensuring this consistency in the data is crucial for accurately labeling them for training a Named Entity Recognition (NER) model."
    ]
   }
  ],
