--- a/src/text_norm_NER/retraining_spacy.ipynb
+++ b/src/text_norm_NER/retraining_spacy.ipynb
@@ -11,9 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cupy-cuda12x in c:\\users\\mikek\\.pyenv\\pyenv-win\\versions\\3.11.7\\lib\\site-packages (13.3.0)\n",
+      "Requirement already satisfied: numpy<2.3,>=1.22 in c:\\users\\mikek\\.pyenv\\pyenv-win\\versions\\3.11.7\\lib\\site-packages (from cupy-cuda12x) (2.2.3)\n",
+      "Requirement already satisfied: fastrlock>=0.5 in c:\\users\\mikek\\.pyenv\\pyenv-win\\versions\\3.11.7\\lib\\site-packages (from cupy-cuda12x) (0.8.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# Install CuPy (adjust based on your CUDA version)\n",
     "%pip install cupy-cuda12x"
@@ -21,12 +41,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://download.pytorch.org/whl/cu126"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 25.0.1\n",
+      "[notice] To update, run: C:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Scripts\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: torch in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (2.6.0)\n",
+      "Collecting torchvision\n",
+      "  Obtaining dependency information for torchvision from https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata\n",
+      "  Using cached https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata (6.3 kB)\n",
+      "Collecting torchaudio\n",
+      "  Obtaining dependency information for torchaudio from https://download.pytorch.org/whl/cu126/torchaudio-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata\n",
+      "  Using cached https://download.pytorch.org/whl/cu126/torchaudio-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata (6.8 kB)\n",
+      "Requirement already satisfied: filelock in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (3.17.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: networkx in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (3.1.5)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (2025.2.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torchvision) (1.26.4)\n",
+      "Collecting torch\n",
+      "  Obtaining dependency information for torch from https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata\n",
+      "  Using cached https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl.metadata (28 kB)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torchvision) (11.1.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from jinja2->torch) (3.0.2)\n",
+      "Using cached https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp311-cp311-win_amd64.whl (6.1 MB)\n",
+      "Using cached https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl (2496.1 MB)\n",
+      "Using cached https://download.pytorch.org/whl/cu126/torchaudio-2.6.0%2Bcu126-cp311-cp311-win_amd64.whl (4.2 MB)\n",
+      "Installing collected packages: torch, torchvision, torchaudio\n",
+      "  Attempting uninstall: torch\n",
+      "    Found existing installation: torch 2.6.0\n",
+      "    Uninstalling torch-2.6.0:\n",
+      "      Successfully uninstalled torch-2.6.0\n",
+      "Successfully installed torch-2.6.0+cu126 torchaudio-2.6.0+cu126 torchvision-0.21.0+cu126\n"
+     ]
+    }
+   ],
    "source": [
     "# Install PyTorch, torchvision, and torchaudio (adjust CUDA version if needed)\n",
-    "%pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126"
+    "!pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126"
    ]
   },
   {
@@ -97,71 +170,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[38;5;2m✔ Created output directory:"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  _torch_pytree._register_pytree_node(\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\thinc\\shims\\pytorch.py:114: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-      "  with torch.cuda.amp.autocast(self._mixed_precision):\n",
-      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\thinc\\shims\\pytorch.py:128: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-      "  with torch.cuda.amp.autocast(self._mixed_precision):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model\u001b[0m\n",
-      "\u001b[38;5;4mℹ Saving to output directory:\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model\u001b[0m\n",
-      "\u001b[38;5;4mℹ Using GPU: 0\u001b[0m\n",
-      "\u001b[1m\n",
-      "=========================== Initializing pipeline ===========================\u001b[0m\n",
-      "\u001b[38;5;2m✔ Initialized pipeline\u001b[0m\n",
-      "\u001b[1m\n",
-      "============================= Training pipeline =============================\u001b[0m\n",
-      "\u001b[38;5;4mℹ Pipeline: ['transformer', 'ner']\u001b[0m\n",
-      "\u001b[38;5;4mℹ Initial learn rate: 0.0\u001b[0m\n",
-      "E    #       LOSS TRANS...  LOSS NER  ENTS_F  ENTS_P  ENTS_R  SCORE \n",
-      "---  ------  -------------  --------  ------  ------  ------  ------\n",
-      "  0       0        1961.45    440.74   42.12   51.10   35.82    0.42\n",
-      "  4     200       23959.72  23403.50   98.30   97.76   98.85    0.98\n",
-      "  9     400         927.97   1842.55   99.52   99.52   99.52    1.00\n",
-      " 14     600         379.49    682.32   99.95   99.95   99.95    1.00\n",
-      " 19     800         205.83    351.65   99.95   99.99   99.91    1.00\n",
-      " 24    1000         106.27    185.48  100.00  100.00  100.00    1.00\n",
-      " 29    1200          80.38    111.30   99.97   99.99   99.95    1.00\n",
-      " 34    1400          69.37    109.36   99.99   99.99  100.00    1.00\n",
-      " 38    1600          46.51     85.95  100.00  100.00  100.00    1.00\n",
-      " 43    1800          25.50     45.32   99.98  100.00   99.95    1.00\n",
-      " 48    2000          29.75     59.31   99.99   99.99  100.00    1.00\n",
-      " 53    2200          52.29     64.09   99.99   99.99  100.00    1.00\n",
-      " 58    2400          40.64     59.52   99.99  100.00   99.98    1.00\n",
-      " 63    2600          44.19     66.57  100.00  100.00  100.00    1.00\n",
-      "\u001b[38;5;2m✔ Saved pipeline to output directory\u001b[0m\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model\\model-last\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python -m spacy train /path/to/config.cfg --output /path/to/model_output_directory --paths.train /path/to/train.spacy --paths.dev /path/to/test.spacy --gpu-id 0"
    ]
