--- a/src/text_norm_NER/retraining_spacy.ipynb
+++ b/src/text_norm_NER/retraining_spacy.ipynb
@@ -168,9 +168,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;4mℹ Saving to output directory:\n",
+      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\u001b[0m\n",
+      "\u001b[38;5;4mℹ Using GPU: 0\u001b[0m\n",
+      "\u001b[1m\n",
+      "=========================== Initializing pipeline ===========================\u001b[0m\n",
+      "\u001b[38;5;2m✔ Initialized pipeline\u001b[0m\n",
+      "\u001b[1m\n",
+      "============================= Training pipeline =============================\u001b[0m\n",
+      "\u001b[38;5;4mℹ Pipeline: ['transformer', 'ner']\u001b[0m\n",
+      "\u001b[38;5;4mℹ Initial learn rate: 0.0\u001b[0m\n",
+      "E    #       LOSS TRANS...  LOSS NER  ENTS_F  ENTS_P  ENTS_R  SCORE \n",
+      "---  ------  -------------  --------  ------  ------  ------  ------\n",
+      "  0       0        1548.26    390.00   43.38   51.87   37.27    0.43\n",
+      "  4     200       24310.89  24001.64   97.39   96.39   98.41    0.97\n",
+      "  9     400         971.46   1942.34   97.44   96.66   98.24    0.97\n",
+      " 14     600         421.22    787.75   97.50   96.89   98.11    0.97\n",
+      " 19     800         213.94    359.86   97.45   96.31   98.62    0.97\n",
+      " 24    1000         119.88    219.65   97.50   96.93   98.07    0.97\n",
+      " 29    1200          72.52    123.25   97.59   96.86   98.32    0.98\n",
+      " 34    1400          38.81     83.06   97.53   96.74   98.32    0.98\n",
+      " 39    1600          52.08     75.51   97.63   96.63   98.66    0.98\n",
+      " 43    1800          54.50     71.72   97.48   96.85   98.11    0.97\n",
+      " 48    2000          48.49     70.56   97.71   96.91   98.53    0.98\n",
+      " 53    2200          36.49     61.72   97.57   96.86   98.28    0.98\n",
+      " 58    2400           8.96     26.77   97.51   96.62   98.41    0.98\n",
+      " 63    2600          41.18     54.48   97.55   96.78   98.32    0.98\n",
+      " 68    2800          54.49     73.75   97.48   96.85   98.11    0.97\n",
+      " 73    3000          59.69     64.76   97.61   96.71   98.53    0.98\n",
+      " 78    3200          43.10     61.80   97.38   96.58   98.20    0.97\n",
+      " 83    3400          49.11     61.38   97.45   96.43   98.49    0.97\n",
+      " 87    3600          42.26     59.24   97.48   96.74   98.24    0.97\n",
+      "\u001b[38;5;2m✔ Saved pipeline to output directory\u001b[0m\n",
+      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model-last\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\thinc\\shims\\pytorch.py:114: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  with torch.cuda.amp.autocast(self._mixed_precision):\n",
+      "c:\\Users\\mikek\\projects\\Text-Normalization\\.venv\\Lib\\site-packages\\thinc\\shims\\pytorch.py:128: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  with torch.cuda.amp.autocast(self._mixed_precision):\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m spacy train /path/to/config.cfg --output /path/to/model_output_directory --paths.train /path/to/train.spacy --paths.dev /path/to/test.spacy --gpu-id 0"
    ]
@@ -206,16 +266,16 @@
       "================================== Results ==================================\u001b[0m\n",
       "\n",
       "TOK     100.00\n",
-      "NER P   96.73 \n",
-      "NER R   97.43 \n",
-      "NER F   97.08 \n",
-      "SPEED   357   \n",
+      "NER P   97.20 \n",
+      "NER R   98.32 \n",
+      "NER F   97.76 \n",
+      "SPEED   321   \n",
       "\n",
       "\u001b[1m\n",
       "=============================== NER (per type) ===============================\u001b[0m\n",
       "\n",
       "             P       R       F\n",
-      "PERSON   96.73   97.43   97.08\n",
+      "PERSON   97.20   98.32   97.76\n",
       "\n",
       "\u001b[38;5;2m✔ Saved results to\n",
       "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\output.json\u001b[0m\n"
@@ -274,10 +334,10 @@
       "\u001b[38;5;2m✔ Including 1 package requirement(s) from meta and config\u001b[0m\n",
       "spacy-transformers>=1.3.4,<1.4.0\n",
       "\u001b[38;5;2m✔ Loaded meta.json from file\u001b[0m\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model\\model-best\\meta.json\n",
+      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\model-best\\meta.json\n",
       "\u001b[38;5;2m✔ Generated README.md from meta.json\u001b[0m\n",
       "\u001b[38;5;2m✔ Successfully created package directory 'en_pipeline-0.0.0'\u001b[0m\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\output\\en_pipeline-0.0.0\n",
+      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\NER_model\\en_pipeline-0.0.0\n",
       "* Creating isolated environment: venv+pip...\n",
       "* Installing packages in isolated environment:\n",
       "  - setuptools >= 40.8.0\n",
@@ -346,7 +406,7 @@
       "removing 'en_pipeline-0.0.0' (and everything under it)\n",
       "Successfully built en_pipeline-0.0.0.tar.gz\n",
       "\u001b[38;5;2m✔ Successfully created zipped Python package\u001b[0m\n",
-      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\output\\en_pipeline-0.0.0\\dist\\en_pipeline-0.0.0.tar.gz\n"
+      "C:\\Users\\mikek\\projects\\Text-Normalization\\src\\text_norm_NER\\NER_model\\en_pipeline-0.0.0\\dist\\en_pipeline-0.0.0.tar.gz\n"
      ]
     },
     {
@@ -372,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing c:\\users\\mikek\\projects\\text-normalization\\src\\text_norm_ner\\output\\en_pipeline-0.0.0\n",
+      "Processing c:\\users\\mikek\\projects\\text-normalization\\src\\text_norm_ner\\ner_model\\en_pipeline-0.0.0\\dist\\en_pipeline-0.0.0.tar.gz\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
       "  Getting requirements to build wheel: started\n",
@@ -427,7 +487,7 @@
       "Requirement already satisfied: sympy==1.13.1 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from torch>=1.8.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (1.13.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from sympy==1.13.1->torch>=1.8.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (1.3.0)\n",
       "Requirement already satisfied: colorama in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy<3.8.0,>=3.7.4->en_pipeline==0.0.0) (0.4.6)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from transformers<4.37.0,>=3.4.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (0.29.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from transformers<4.37.0,>=3.4.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (0.29.1)\n",
       "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from transformers<4.37.0,>=3.4.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (6.0.2)\n",
       "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from transformers<4.37.0,>=3.4.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (2024.11.6)\n",
       "Requirement already satisfied: tokenizers<0.19,>=0.14 in c:\\users\\mikek\\projects\\text-normalization\\.venv\\lib\\site-packages (from transformers<4.37.0,>=3.4.0->spacy-transformers<1.4.0,>=1.3.4->en_pipeline==0.0.0) (0.15.2)\n",
@@ -439,15 +499,16 @@
       "Building wheels for collected packages: en_pipeline\n",
       "  Building wheel for en_pipeline (pyproject.toml): started\n",
       "  Building wheel for en_pipeline (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for en_pipeline: filename=en_pipeline-0.0.0-py3-none-any.whl size=434078417 sha256=1f3b4ca1202977a24e7032d823a6c66f7bf3cc2b3798df3d07859541900baf08\n",
-      "  Stored in directory: c:\\users\\mikek\\appdata\\local\\pip\\cache\\wheels\\45\\48\\ef\\5285815e886b9cce76bf94cfcd4c0e01bfc0b43eef7f0be145\n",
+      "  Created wheel for en_pipeline: filename=en_pipeline-0.0.0-py3-none-any.whl size=433930716 sha256=71a4240c0cbc222c6519c30d4e035bd40e39ab9654d2a73a1ae92c8e7de0ed23\n",
+      "  Stored in directory: c:\\users\\mikek\\appdata\\local\\pip\\cache\\wheels\\ad\\84\\de\\492ef9d202dc0cd11fd18910b9357d88565932ff281f15cd68\n",
       "Successfully built en_pipeline\n",
       "Installing collected packages: en_pipeline\n",
       "  Attempting uninstall: en_pipeline\n",
       "    Found existing installation: en_pipeline 0.0.0\n",
       "    Uninstalling en_pipeline-0.0.0:\n",
       "      Successfully uninstalled en_pipeline-0.0.0\n",
-      "Successfully installed en_pipeline-0.0.0\n"
+      "Successfully installed en_pipeline-0.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
